# UniAi

./: .env  .gitignore  Dockerfile  desktop.ini  docker-compose.yml  main.py  pyproject.toml
src/: analyzer.py  bot.py  config.py  read_file.py  utils.py  vk_api.py
src/inlines/: inlines.py
src/ready_data/: gender_avg.xlsx
src/schemas/: vk_schemas.py
