[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Lampower <123113309+Lampower@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
dotenv = "^0.9.9"
aiogram = "3.22.0"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
matplotlib = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
